@@ -4,4 +4,5 @@
     <string id="30002">Rows Per Page Count</string>
     <string id="30003">Lock Folders View Style</string>
     <string id="30004">Enable Optimization For Skin</string>
+	<string id="30005">Use Gate http://fex.net</string>
 </strings>
