@@ -4,4 +4,5 @@
     <string id="30002">Кiлькiсть об'єктiв на сторiнцi</string>
     <string id="30003">Утримувати стиль вiдображення спискiв</string>
     <string id="30004">Оптимизувати пiд скiн</string>
+	<string id="30005">Використати шлюз http://fex.net</string>
 </strings>
